# videoprocessing

./: .gitignore  CMakeLists.txt  README.md  VidVis.cxx  mog_demo.py
InteractWithImage/: CMakeLists.txt  InteractWithImage.cxx  InteractWithImage.py
